# dbo

./: .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bun.lockb  code_of_conduct.md  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  jest.config.mjs  lefthook.yml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: layout.tsx  page.tsx
backend/: .air.toml  .gitignore  .golangci.yml  Dockerfile.dev  go.mod  go.sum  go.work  go.work.sum  main.go
components/: table.tsx
desktop/: .gitignore  .prettierrc.json  Cargo.toml  constants.ts  forge.config.js  forge.config.ts  index.ts  package-lock.json  package.json  pnpm-lock.yaml  preload.ts  tauri.conf.json  tauri.macos.conf.json  tauri.microsoftstore.conf.json  tsconfig.json
desktop/app-icon/: background.tiff
desktop/capabilities/: desktop.json  migrated.json
desktop/icons/: icon.icns
desktop/src/: constants.ts  index.ts  main.rs  preload.ts
docs/: .gitignore  Monaco-Editor-LSP-Implementation.md  Project-Architecture.md
e2e/: biome.json  package-lock.json  package.json  playwright.config.ts
frontend/: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  .prettierrc.json  Dockerfile.dev  Makefile  biome.json  eslint.config.mts  index.html  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.js  vitest.workspace.ts
public/: sw.js  sw.js.map
server/: .env  (+5 more)
(+1680 files in other folders)
